welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:9: error: Boolean does not take parameters
		vuBiscuit();
                         ^Program:18: error: type mismatch;
 found   : Unit
 required: Boolean
gauche()
      ^